@@ -1,4 +1,4 @@
 Programmed by: Linley Henzell
 Initial Linux adaptation: Miriam Ruiz
 Correct data storing stuff: Thomas Harte
-Continued unix adaptation: Matěj Týč
+Continued unix adaptation and maintenance: Matěj Týč
